output/facebook/rocksdb/issues/42.txt
when i compiled rocksdb(make clean; make), i got the error as followings:

```
db/table_properties_collector_test.cc:137:15: error: converting to ‘rocksdb::TableProperties::UserCollectedProperties {aka std::unordered_map<std::basic_string<char>, std::basic_string<char> >}’ from initializer list would use explicit constructor ‘std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::unordered_map(std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::size_type, const hasher&, const key_equal&, const allocator_type&) [with _Key = std::basic_string<char>; _Tp = std::basic_string<char>; _Hash = std::hash<std::basic_string<char> >; _Pred = std::equal_to<std::basic_string<char> >; _Alloc = std::allocator<std::pair<const std::basic_string<char>, std::basic_string<char> > >; std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::size_type = long unsigned int; std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::hasher = std::hash<std::basic_string<char> >; std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::key_equal = std::equal_to<std::basic_string<char> >; std::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::allocator_type = std::allocator<std::pair<const std::basic_string<char>, std::basic_string<char> > >]’
   return {};
           ^
make: *** [db/table_properties_collector_test.o] Error 1
```

my environment:

uname -a

```
Darwin icycrystal4-MBP.local 13.0.0 Darwin Kernel Version 13.0.0: Thu Sep 19 22:22:27 PDT 2013; root:xnu-2422.1.72~6/RELEASE_X86_64 x86_64
```

g++ -v

```
Using built-in specs.
COLLECT_GCC=g++
COLLECT_LTO_WRAPPER=/usr/local/libexec/gcc/x86_64-apple-darwin13.0.0/4.9.0/lto-wrapper
Target: x86_64-apple-darwin13.0.0
Configured with: ../gcc-4.9-20130929/configure --enable-languages=c,c++,fortran
Thread model: posix
gcc version 4.9.0 20130929 (experimental) (GCC)
```

ll

```
-rw-r--r--    1 crystal  staff       607 Dec 20 17:40 CONTRIBUTING.md
-rw-r--r--    1 crystal  staff      2431 Dec 20 17:40 INSTALL.md
-rw-r--r--    1 crystal  staff      1646 Dec 20 17:40 LICENSE
-rw-r--r--    1 crystal  staff     17154 Dec 20 17:40 Makefile
-rw-r--r--    1 crystal  staff      1408 Dec 20 17:40 PATENTS
-rw-r--r--    1 crystal  staff      2892 Dec 20 17:40 README
-rw-r--r--    1 crystal  staff        96 Dec 20 17:40 README.fb
-rw-r--r--    1 crystal  staff      2165 Dec 23 11:31 build_config.mk
drwxr-xr-x   10 crystal  staff       340 Dec 23 10:32 build_tools
drwxr-xr-x    4 crystal  staff       136 Dec 20 17:40 coverage
drwxr-xr-x  116 crystal  staff      3944 Dec 23 11:13 db
-rwxr-xr-x    1 crystal  staff   2248372 Dec 23 11:31 db_bench
-rwxr-xr-x    1 crystal  staff   2688068 Dec 23 11:31 db_test
drwxr-xr-x    7 crystal  staff       238 Dec 20 17:40 doc
drwxr-xr-x    6 crystal  staff       204 Dec 20 17:40 hdfs
drwxr-xr-x    3 crystal  staff       102 Dec 20 17:40 helpers
drwxr-xr-x    4 crystal  staff       136 Dec 20 17:40 include
-rw-r--r--    1 crystal  staff  29860872 Dec 23 11:31 librocksdb.a
drwxr-xr-x    3 crystal  staff       102 Dec 20 17:40 linters
drwxr-xr-x   14 crystal  staff       476 Dec 23 11:13 port
-rwxr-xr-x    1 crystal  staff   2094136 Dec 23 11:31 signal_test
drwxr-xr-x   50 crystal  staff      1700 Dec 23 11:11 table
drwxr-xr-x   12 crystal  staff       408 Dec 22 17:09 tools
drwxr-xr-x  128 crystal  staff      4352 Dec 23 11:31 util
drwxr-xr-x    7 crystal  staff       238 Dec 20 17:40 utilities
```

git pull

```
Already up-to-date
```

Does it means i successfuly build the rocksdb on my Mavericks?

Does it means i successfuly build the rocksdb on my Mavericks?
Just cause i comment off the "table_properties_collector_test" in the Makefile, everything goes right.

ll | awk '{print "    "$0}'

```
total 228056
-rw-r--r--    1 crystal  staff       607 Dec 20 17:40 CONTRIBUTING.md
-rw-r--r--    1 crystal  staff      2431 Dec 20 17:40 INSTALL.md
-rw-r--r--    1 crystal  staff      1646 Dec 20 17:40 LICENSE
-rw-r--r--    1 crystal  staff     16895 Dec 23 11:56 Makefile
-rw-r--r--    1 crystal  staff     17154 Dec 23 11:55 Makefile.12.23
-rw-r--r--    1 crystal  staff      1408 Dec 20 17:40 PATENTS
-rw-r--r--    1 crystal  staff      2892 Dec 20 17:40 README
-rw-r--r--    1 crystal  staff        96 Dec 20 17:40 README.fb
-rwxr-xr-x    1 crystal  staff   2112804 Dec 23 11:56 arena_test
-rwxr-xr-x    1 crystal  staff   2153804 Dec 23 11:56 auto_roll_logger_test
-rwxr-xr-x    1 crystal  staff   2164356 Dec 23 11:58 backupable_db_test
-rwxr-xr-x    1 crystal  staff   2111420 Dec 23 11:59 blob_store_bench
-rwxr-xr-x    1 crystal  staff   2143444 Dec 23 11:56 blob_store_test
-rwxr-xr-x    1 crystal  staff   2115468 Dec 23 11:56 block_test
-rwxr-xr-x    1 crystal  staff   2125764 Dec 23 11:56 bloom_test
-rw-r--r--    1 crystal  staff      2165 Dec 23 11:56 build_config.mk
drwxr-xr-x   10 crystal  staff       340 Dec 23 10:32 build_tools
-rwxr-xr-x    1 crystal  staff   2110916 Dec 23 11:56 c_test
-rwxr-xr-x    1 crystal  staff   2187076 Dec 23 11:56 cache_test
-rwxr-xr-x    1 crystal  staff   2188312 Dec 23 11:56 coding_test
-rwxr-xr-x    1 crystal  staff   2180664 Dec 23 11:56 corruption_test
drwxr-xr-x    4 crystal  staff       136 Dec 20 17:40 coverage
-rwxr-xr-x    1 crystal  staff   2116976 Dec 23 11:56 crc32c_test
drwxr-xr-x  128 crystal  staff      4352 Dec 23 11:58 db
-rwxr-xr-x    1 crystal  staff   2248372 Dec 23 11:56 db_bench
-rwxr-xr-x    1 crystal  staff   2106236 Dec 23 11:59 db_repl_stress
-rwxr-xr-x    1 crystal  staff   2193412 Dec 23 11:59 db_stress
-rwxr-xr-x    1 crystal  staff   2688068 Dec 23 11:56 db_test
-rwxr-xr-x    1 crystal  staff   2130324 Dec 23 11:56 dbformat_test
-rwxr-xr-x    1 crystal  staff   2165124 Dec 23 11:58 deletefile_test
drwxr-xr-x    7 crystal  staff       238 Dec 20 17:40 doc
-rwxr-xr-x    1 crystal  staff   2132304 Dec 23 11:56 env_test
-rwxr-xr-x    1 crystal  staff   2111556 Dec 23 11:56 filelock_test
-rwxr-xr-x    1 crystal  staff   2128648 Dec 23 11:57 filename_test
-rwxr-xr-x    1 crystal  staff   2151800 Dec 23 11:57 filter_block_test
drwxr-xr-x    6 crystal  staff       204 Dec 20 17:40 hdfs
drwxr-xr-x    3 crystal  staff       102 Dec 20 17:40 helpers
-rwxr-xr-x    1 crystal  staff   2120948 Dec 23 11:57 histogram_test
drwxr-xr-x    4 crystal  staff       136 Dec 20 17:40 include
-rwxr-xr-x    1 crystal  staff   2098664 Dec 23 11:59 ldb
-rw-r--r--    1 crystal  staff    704672 Dec 23 11:57 libmemenv.a
-rw-r--r--    1 crystal  staff  29860872 Dec 23 11:56 librocksdb.a
drwxr-xr-x    3 crystal  staff       102 Dec 20 17:40 linters
-rwxr-xr-x    1 crystal  staff   2221864 Dec 23 11:57 log_test
-rwxr-xr-x    1 crystal  staff   2119824 Dec 23 11:57 manual_compaction_test
-rwxr-xr-x    1 crystal  staff   1548728 Dec 23 11:57 memenv_test
-rwxr-xr-x    1 crystal  staff   2134028 Dec 23 11:57 merge_test
drwxr-xr-x   14 crystal  staff       476 Dec 23 11:13 port
-rwxr-xr-x    1 crystal  staff   2258772 Dec 23 11:57 redis_test
-rwxr-xr-x    1 crystal  staff   2159780 Dec 23 11:57 reduce_levels_test
-rwxr-xr-x    1 crystal  staff   2094136 Dec 23 11:56 signal_test
-rwxr-xr-x    1 crystal  staff   2202616 Dec 23 11:58 simple_table_db_test
-rwxr-xr-x    1 crystal  staff   2148472 Dec 23 11:58 skiplist_test
-rwxr-xr-x    1 crystal  staff   2108508 Dec 23 11:59 sst_dump
-rwxr-xr-x    1 crystal  staff   2184224 Dec 23 11:58 stringappend_test
drwxr-xr-x   53 crystal  staff      1802 Dec 23 11:59 table
-rwxr-xr-x    1 crystal  staff   2232352 Dec 23 11:59 table_test
drwxr-xr-x   18 crystal  staff       612 Dec 23 11:59 tools
-rwxr-xr-x    1 crystal  staff   2180052 Dec 23 11:58 ttl_test
drwxr-xr-x  139 crystal  staff      4726 Dec 23 11:57 util
drwxr-xr-x    7 crystal  staff       238 Dec 20 17:40 utilities
-rwxr-xr-x    1 crystal  staff   2111580 Dec 23 11:58 version_edit_test
-rwxr-xr-x    1 crystal  staff   2190760 Dec 23 11:58 version_set_test
-rwxr-xr-x    1 crystal  staff   2156352 Dec 23 11:58 write_batch_test
```

@icycrystal4, I used gcc 4.8 in maverick but didn't see such problem.
I'll take a look at this and fix it. 

icycrystal4: this compilation error should have been fixed by now. Please let us know if this is not the case. Thanks.

